2005-03-22 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.h: fixing bad macro name under VM_USE_PACKED.

2005-03-22 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompCmds.c:
	* generic/tclCompile.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c:
	First (very timid) post-compile optimisations - testing the basic
	infrastructure. The only real optimisation at this time is that
	loop exceptions are replaced with jumps were possible, and that
	noops (jumps of width 1, inserted arbitrarily for testing
	purposes) are effectively removed.
	Slight change in the [foreach] compilation.
	Fixed the bytecode debugger.

2005-03-21  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompile.h (HP_STASH):	Corrections for LP64
	systems to avoid errors due to sign-extension of the lower
	value being stashed.
	* generic/tclCompCmds.c (TclCompileLassignCmd,TclCompileLsetCmd):	
	Additional sign-extension corrections for LP64 systems.

2005-03-19 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c:
	* generic/tclCompile.h: Trivial instruction numbering change
	
	* generic/tclExecute.c: Code for jump-if-true at comparisons,
	removed corresponding runtime peephole opts - as they will be
	performed at compile time by the optimiser.

2005-03-19 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.h: (VM_USE_PACKED) added a check that jump
	distances do not exceed the packing capability; if they do,
	panic. Should not happen very often, jumps of up to 32k 32b words
	are still possible. Should be replaced with a mechanism to
	TCL_OUT_LINE_COMPILE instead (not trivial, as typically code will
	already be emitted and ExceptionRanges created).

2005-03-19 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c:
	Instruction set cleanup: one instruction INST_YES (not-not) added,
	removal of unused instructions (66 are left), renumbering to ease
	the code of the optimiser. Instructions that are logical negation